# pydantic2protobuf

./: .cruft.json  .gitignore  .pre-commit-config.yaml  .requirements.txt  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test.yml
docs/: LINKS.md
pydantic2protobuf/: cli_app.py
pydantic2protobuf/services/: fastapi_to_proto.py  gen_protobuf.py  j2_fastapi_to_proto.py  j2_pydantic_to_proto.py  pydantic_to_proto.py
pydantic2protobuf/services/serializer/: with_fstring.py
pydantic2protobuf/services/with_dataclasses/: fastapi_to_proto.py  pydantic_to_proto.py
pydantic2protobuf/services/with_dataclasses/serializer/: with_fstring.py
pydantic2protobuf/tools/: format.py  from_fastapi.py  from_pydantic.py  pydantic_protobuf_types.py  to_proto.py
tests/: _test_pydantic_to_proto.py  test_from_pydantic.py  test_gen_message_definition.py  test_j2_routes_to_proto.py  test_pydantic_to_proto.py  test_routes_to_proto.py  test_serializer_on_routes.py  test_to_proto.py
tests/api/: with_containers.py  with_nested_fields.py  with_repeated_fields.py
tests/models/: __init__.py  with_basic_types.py  with_nested_models.py  with_optional_fields.py  with_protobuf_message.py  with_repeated_fields.py
tests/serializer/: test_with_fstring.py
tests/tools/: build_proto.sh  parametrization_case.py
tests/with_dataclasses/: test_routes_to_proto.py
tests/with_dataclasses/serializer/: test_with_fstring.py
