[tool.poetry]
name = "pydantic2protobuf"
version = "0.1.0"
description = "Generate protobuf file from Pydantic models"
authors = [
    "Lionel ATTY <yoyonel@hotmail.com>",
]

license = "BSD-3-Clause"
readme = "README.md"

documentation = "https://github.com/yoyonel/pydantic2protobuf/blob/master/README.md"
homepage = "https://github.com/yoyonel/pydantic2protobuf"
repository = "https://github.com/yoyonel/pydantic2protobuf"

classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

include = ["pydantic2protobuf/py.typed"]
packages = [
  { include = "pydantic2protobuf" },
]

[tool.poetry.dependencies]
python = ">=3.6.1, <4.0"
grpcio-tools = "^1.35.0"
pydantic = "^1.7.3"
mypy-protobuf = "^1.23"
typing-extensions = "^3.7.4"
attrs = "^20.3.0"
fastapi = "^0.63.0"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
better-exceptions = "^0.3.2"
black = "^20.8b1"
flake8 = "^3.8.3"
flake8-bugbear = "^20.11.1"
flake8-builtins = "^1.5.3"
flake8-comprehensions = "^3.3.1"
flake8-debugger = "^4.0.0"
isort = "^5.5.2"
mypy = "^0.800"
pdbpp = "^0.10.2"
pep8-naming = "^0.11.1"
pre-commit = "^2.7.1"
pytest = "^6.0.1"
pytest-cov = "^2.10.1"
pytest-mock = "^3.3.1"
tox = "^3.20.0"
tox-gh-actions = "^1.3.0"
pytest-sugar = "^0.9.4"
pytest-parametrization = "^2019.1.4"
tox-pyenv = "^1.1.0"

[tool.black]
line-length = 120
skip-string-normalization = true
target_version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# https://docs.pytest.org/en/stable/customize.html?highlight=tool%20pytest%20ini_options#pyproject-toml
[tool.pytest.ini_options]
# https://docs.pytest.org/en/stable/doctest.html?highlight=doctest%20modules#doctest-integration-for-modules-and-test-files
addopts = "--doctest-modules"
